gestion users  with doc swagger
